--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,16 @@ app/*/configs
 # submodules
 /api/
 /deps/
-/mock/deps/
+
+# go work
+go.work
+go.work.sum
 
 # generated files
 bin/
 *.log
 vulcan/fixtures/outputs/
+
+.specstory/
+.cursor*
+.actrc
