--- a/mercury/configs.tmpl/secret.yaml
+++ b/mercury/configs.tmpl/secret.yaml
@@ -1,3 +1,5 @@
-aes_key: {aes_key}
-server_pub_key: {server_pub_key}
-client_pri_key: {client_pri_key}
+account_aes_key: "${ACCOUNT_AES_KEY}"
+client_cert_version: 1
+client_cert_private_key: "${CLIENT_CERT_PRIVATE_KEY}"
+server_cert_version: 1
+server_cert: "${SERVER_CERT}"
