refactor: update dependencies and refactor database handling

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -64,6 +64,7 @@ linters:
       - path: gen/
         linters:
           - wsl
+          - whitespace
       - path: mercury/gen/
         linters:
           - wsl
