--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v5.0.0
     hooks:
       - id: end-of-file-fixer
+        exclude: ^gen/gamedata/json/.*
       - id: trailing-whitespace
   - repo: https://github.com/golangci/golangci-lint
     rev: v2.1.1
